--- a/my-app/src/TodoList.css
+++ b/my-app/src/TodoList.css
@@ -16,6 +16,7 @@
 
 .todotoggleButton {
   width: 35px;
+  height: 35px;
   background: transparent;
   border: none;
   font-size: 1.5rem;
@@ -29,6 +30,7 @@
   opacity: 100%;
   transition: opacity 0.3s ease;
   margin-top: 50px;
+  height: 33px;
 }
 
 .todoHeader.hidden {
@@ -59,6 +61,7 @@
 
 .addButton, .clearButton {
   width: 50px;
+  height: 30px;
   padding: 5px;
   cursor: pointer;
   margin-left: 10px;
@@ -74,6 +77,8 @@
   flex-grow: 1;
   opacity: 100%;
   transition: opacity 0.3s ease;
+  overflow-y: auto;
+  max-height: calc(100vh - 244px);
 }
 
 .tasksContainer.hidden {
